# secure-ble-for-esp32-android

./: .gitignore  README.md  gen_cert_chain.sh
bleprph/: sdkconfig
console_outputs/: l2cap_client_output.txt  l2cap_server_output.txt
doc/bachelor_thesis_german/: Bachelorarbeit_Marian_Käsemodel.tex  gliederung_und_stichpunkte.tex  hyphenation.tex  literaturquellen.bib
esp/apis/: app_config.h  app_gap.c  app_gap.h  app_io_ctx.h  app_l2cap.c  app_l2cap.h  app_l2cap_io_calls.c  app_l2cap_io_calls.h  app_misc.c  app_misc.h  app_ssl_ctx.c  app_ssl_ctx.h  app_tags.h  debug_l2cap.c  debug_l2cap.h  io_ctx.h  sdu_queue.c  sdu_queue.h  ssl_callbacks.c  ssl_callbacks.h  ssl_ctx.c  subscription.c  subscription.h
esp/client/: sdkconfig  sdkconfig.old
esp/client/main/: CMakeLists.txt  app_config.h  main.c
esp/server/: sdkconfig  sdkconfig.old
esp32-app/: esp32-app.ino  testlib.h
esp_apis/: app_config.h  app_gap.c  app_l2cap.c  app_l2cap.h  app_misc.c  app_ssl.c  app_ssl.h  app_tags.h  sdu_queue.c  sdu_queue.h  ssl_ctx.c  ssl_ctx.h
gatt_server/: sdkconfig  sdkconfig.old
gatt_server/main/: CMakeLists.txt  gatts_demo.c
l2cap-from-btshell/: CMakeLists.txt  sdkconfig  sdkconfig.old
l2cap-from-btshell/main/: CMakeLists.txt  l2cap-from-btshell.c  l2cap-from-btshell.h
l2cap_client/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
l2cap_client/main/: CMakeLists.txt  app_gap.h  app_l2cap.c  app_misc.c  app_misc.h  main.c
l2cap_server/: CMakeLists.txt  sdkconfig  sdkconfig.old
l2cap_server/main/: CMakeLists.txt  app_gap.c  app_l2cap.h  main.c
(+91 files in other folders)
